fix button display issue on firefox

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -93,6 +93,7 @@ a:visited {
   line-height: 24px;
   display: block;
   width: fit-content;
+  width: -moz-fit-content;
 }
 
 .title {
